@@ -13,7 +13,7 @@ The source files for unpreprocessed C code.
 
 .TP
 .B *.c
-The C code after preprocessing by ansidecl.
+The C code after preprocessing by comment5 and varbrace.
 
 .TP
 .B *.lisp
